FullSb1-27-apr-15/src/objects/Application_Fee_Merchant_Services__c.object
<CustomObject>
    <description>This object contains the Merchant Services informaton required to process Application Fees via Six Cards iPage Service.  The Information necessary to process the Application Fees have been isolated in this object because all Application Fees are charged in USD and to a particular Six Cards Merchant Id and Validation Code.</description>
    <fields>
        <fullName>Application_Fee__c</fullName>
        <label>Application Fee</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Merchant_ID__c</fullName>
        <label>Merchant ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Code__c</fullName>
        <label>Validation Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Application Fee Merchant Services</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application_Fee__c</columns>
        <columns>Merchant_ID__c</columns>
        <columns>Validation_Code__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Fee Merchant Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>